--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                                         <h5 class="minor">UX/UI Design</h3>
                                         <h2 class="major">KIVA</h2>
                                         <p>
-                                            Kiva expands financial mobility through zero-<br>
-                                            interest crowdfunding. By revamping a<br> 
-                                            platform that allows leendees to partner with<br> 
-                                            lenders, Kiva scales the scope of capital to let<br>
+                                            Kiva expands financial mobility through zero-
+                                            interest crowdfunding. By revamping a
+                                            platform that allows leendees to partner with
+                                            lenders, Kiva scales the scope of capital to let
                                             it do what money does best: create wealth. 
                                         </p>
                                         <div class="btn">
@@ -137,6 +137,6 @@
                 </section>
         </div>
 </section>
-    <script src="apps.js"></script>            
+    <script src="apps"></script>            
 </body>
 </html>
